--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <section id="introduction-section">
 
         <p> Hi there. My name is Alanna, but most call me Lana.</p>
-        <p> I’m currently pursuing a <b>master’s degree in computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. That means I spend 90% of my day reading and writing code and somehow an additional 90% debugging. I’m <b>currently seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b>
+        <p> I’m currently pursuing a <b>master’s degree in computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. That means I spend 90% of my day reading and writing code and somehow an additional 90% debugging.</p>
+
+        <p>I’m also currently <b>seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b></p>
         <p><a target="_blank" href="resources/Alanna_Pasco_Resume.PDF">View my resume</a></p>
       </section>
 
