--- a/tabs/work.html
+++ b/tabs/work.html
@@ -34,7 +34,7 @@
           CS 4500 Software Development - Fall 2020<br>
           Roughly 7,375 lines of Java<br><br>
           <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides servers to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components. Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling. That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I didn't meet the requirements to.
-          Many undergraduates consider this course the most challenging of their career and I simply did not wish to miss out on the incredible learning experience this course presented. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
+          Many undergraduates consider this course the most challenging of their career and I simply did not wish to miss out on the incredible learning experience it presented. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
           <b>Project highlights:</b>
           <ul>
             <li>Semester-long <b>pair programming</b> collaboration with Brock Fenbert</li>
@@ -57,7 +57,7 @@
           DS 2000 - Spring 2018<br>
           Python and Statistics<br><br>
           <b>Project Description:</b> Build a tool that predicts which language a document is written in given a sample set of documents whose languages are known.
-          This was my first Python project and I thoroughly enjoyed working on something that married my love of languages with my love of coding.<br>
+          This was my first Python project and I thoroughly enjoyed working on something that married my love of languages with my love of coding.<br><br>
           <b>Method:</b>
           <ol>
             <li>Create two dictionaries: one for files we <i>do</i> know the language of, and one for unknown files</li>
