--- a/tabs/work.html
+++ b/tabs/work.html
@@ -33,13 +33,13 @@
         <p>
           CS 4500 Software Development - Fall 2020<br>
           Roughly 7,375 lines of Java<br><br>
-          <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides servers to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components. Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling. That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I didn't meet the requirements to.
+          <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides a server to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components. Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling. That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I didn't meet the requirements to.
           Many undergraduates consider this course the most challenging of their career and I simply did not wish to miss out on the incredible learning experience it presented. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
           <b>Project highlights:</b>
           <ul>
-            <li>Semester-long <b>pair programming</b> collaboration with Brock Fenbert</li>
+            <li>Semester-long <b>pair programming</b> collaboration</li>
             <li>Wrote detailed <b>design documents</b>, defended design choices</li>
-            <li>Performed <b>two code walks</b> for class feedback and implemented feedback</li>
+            <li>Presented <b>two code walks</b> for class feedback and implemented feedback</li>
             <li><b>Integration tests</b> for each milestone; unit tests for each file</li>
             <li>A <b>complex tree data structure to lazily generate</b> future game outcomes for strategizing and determining game rules mid-game</li>
             <li>Implemented a potential hacker’s AI player-software using the <b>minimax algorithm strategy</b></li>
@@ -56,8 +56,7 @@
         <p>
           DS 2000 - Spring 2018<br>
           Python and Statistics<br><br>
-          <b>Project Description:</b> Build a tool that predicts which language a document is written in given a sample set of documents whose languages are known.
-          This was my first Python project and I thoroughly enjoyed working on something that married my love of languages with my love of coding.<br><br>
+          <b>Project Description:</b> Build a tool that predicts which language a document is written in given a sample set of documents whose languages are known.<br><br>
           <b>Method:</b>
           <ol>
             <li>Create two dictionaries: one for files we <i>do</i> know the language of, and one for unknown files</li>
@@ -81,10 +80,10 @@
         <p>
           CS 2510 Fundamentals of CS II - Spring 2018<br>
           Java and Graph Theory<br><br>
-          <b>Project Description:</b> Implement Light ‘Em All, a game where the player connects wires by rotating tiles and moves the power station across the wires until the entire grid is connected and lit. The catch: The power station is weak and only exerts power up to a particular radius from the station, so once all the wires are connected the user must use the arrow keys to find a point in the grid where all edges of the grid are reachable by light. <br><br>
+          <b>Project Description:</b> Implement Light ‘Em All, a game where the player connects wires by rotating tiles and moves the power station across the wires until the entire grid is connected and lit. The catch: The power station is weak and only exerts power up to a particular radius from the station, so once all the wires are connected the user must use the arrow keys to find a point on the grid where all its edges are reachable by light. <br><br>
           <b>Project highlights:</b>
           <ul>
-            <li>Determined the <b>minimum spanning tree</b> of the game's underlying graph using <b>Kruskal’s algorithm</b> to generate the continuous wire grid before randomly rotating tiles for gameplay</li>
+            <li>Identified the <b>minimum spanning tree</b> of the game's underlying graph using <b>Kruskal’s algorithm</b> to generate the continuous wire grid before randomly rotating tiles for gameplay</li>
             <li>Calculated <b>radius of power</b> by finding the furthest distance between any two nodes and cutting that in half</li>
             <li>Used <b>breadth first search</b> to traverse tiles stemming from power station and light only the tiles within the radius of power; Implemented gradient color to make closer nodes brighter than further nodes</li>
             <li>Implemented the option to generate a <b>biased graph</b> toward more horizontal or vertical wires by increasing the weight of horizontal or vertical edges respectively</li>
