updated work tab

--- a/tabs/work.html
+++ b/tabs/work.html
@@ -33,8 +33,10 @@
         <p>
           CS 4500 Software Development - Fall 2020<br>
           Roughly 7,375 lines of Java<br><br>
-          <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides a server to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components. Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling. That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I didn't meet the requirements to.
-          Many undergraduates consider this course the most challenging of their career and I simply did not wish to miss out on the incredible learning experience it presented. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
+          <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides a server to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components.
+          Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling.
+          That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I had to wait another year to meet the requirements to.
+          Many undergraduates consider this course the most challenging of their career and I simply did not wish to wait to experience it. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
           <b>Project highlights:</b>
           <ul>
             <li>Semester-long <b>pair programming</b> collaboration</li>
