--- a/tabs/code.html
+++ b/tabs/code.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Alanna Pasco</title>
 
-  <link rel="stylesheet" href="../stylesheets/work.css">
+  <link rel="stylesheet" href="../stylesheets/code.css">
   <link rel="stylesheet" href="stylesheets/github-light.css">
   <meta name="viewport" content="width=device-width">
   <!--[if lt IE 9]>
@@ -18,8 +18,8 @@
 
 <div id="tabs">
   <a class="view" href="../index.html"> Home </a> |
-  <a class="view" href="about.html"> Story </a> |
-  <a class="active" href="#work"> Work </a>
+  <a class="view" href="story.html"> Story </a> |
+  <a class="active" href="#code"> My Code </a>
 </div>
 
 <body>
@@ -32,8 +32,8 @@
         <img alt="UML Diagram" class="demo-left" src="../resources/sundown_diagram.png">
         <p>
           CS 4500 Software Development - Fall 2020<br>
-          Roughly 7,375 lines of Java<br><br>
-          <b>Project Description:</b> Design and implement a gaming system that hosts games of Hey, That’s my Fish! and provides a server to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components.
+          Roughly 8,000 lines of Java and 7 pages of interace design <br><br>
+          <b>Project Description:</b> Design and implement a gaming system that hosts games of <i>Hey, That’s my Fish!</i> and provides a server to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components.
           Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling.
           That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I had to wait another year to meet the requirements to.
           Many undergraduates consider this course the most challenging of their career and I simply did not wish to wait to experience it. According to Professor Felleisen, I earned an A for the equivalent MS level course.<br><br>
@@ -41,7 +41,7 @@
           <ul>
             <li>Semester-long <b>pair programming</b> collaboration</li>
             <li>Wrote detailed <b>design documents</b>, defended design choices</li>
-            <li>Presented <b>two code walks</b> for class feedback and implemented feedback</li>
+            <li>Presented <b>two code walks</b> for class of 50 students as well as a 1-hour final code walk with course staff  </li>
             <li><b>Integration tests</b> for each milestone; unit tests for each file</li>
             <li>A <b>complex tree data structure to lazily generate</b> future game outcomes for strategizing and determining game rules mid-game</li>
             <li>Implemented a potential hacker’s AI player-software using the <b>minimax algorithm strategy</b></li>
@@ -82,7 +82,7 @@
         <p>
           CS 2510 Fundamentals of CS II - Spring 2018<br>
           Java and Graph Theory<br><br>
-          <b>Project Description:</b> Implement Light ‘Em All, a game where the player connects wires by rotating tiles and moves the power station across the wires until the entire grid is connected and lit. The catch: The power station is weak and only exerts power up to a particular radius from the station, so once all the wires are connected the user must use the arrow keys to find a point on the grid where all its edges are reachable by light. <br><br>
+          <b>Project Description:</b> Implement <i>Light ‘Em All</i>, a game where the player connects wires by rotating tiles and moves the power station across the wires until the entire grid is connected and lit. The catch: The power station is weak and only exerts power up to a particular radius from the station, so once all the wires are connected the user must use the arrow keys to find a point on the grid where all its edges are reachable by light. <br><br>
           <b>Project highlights:</b>
           <ul>
             <li>Identified the <b>minimum spanning tree</b> of the game's underlying graph using <b>Kruskal’s algorithm</b> to generate the continuous wire grid before randomly rotating tiles for gameplay</li>
