--- a/tabs/story.html
+++ b/tabs/story.html
@@ -18,8 +18,8 @@
 
 <div id="tabs">
   <a class="view" href="../index.html"> Home </a> |
-  <a class="active" href="#about"> Story </a> |
-  <a class="view" href="work.html"> Work </a>
+  <a class="active" href="#story"> Story </a> |
+  <a class="view" href="tabs/code.html"> My Code </a>
 </div>
 
 
@@ -45,7 +45,7 @@
 
         <p>After transferring to Northeastern University in 2016, I was working part-time at a local bakery when I had an idea to improve the quality of our refrigerated products by tracking shelf life in a structured manner. Waste reduction and increased sales were side effects of my idea as it led the team to place more informed orders from our supplier. When one of my favorite regular customers, a software engineer, once asked what I was working on, I showed him my color-coded data visualization of the display shelf. His reaction surprised me: his eyes lit up, he grabbed a pen and napkin, and started explaining to me how my little chart was a computer program. And just like that, I was inspired to take my first computer science course.</p>
 
-        <p>I instantly found a crossover between language learning and programming. Both pursuits engage similar aspects of the intellect: creativity, organization, sequential processing, and appreciating the abstract. Over the years I have become obsessed with using software to solve practical problems while I continue to use my linguistic abilities to analyze social ones. After completing my master's degree, I plan to continue to integrate both of my passions and use programming to transform and improve the lives of people around the world.</p>
+        <p>I instantly found a crossover between language learning and programming. Both pursuits engage similar aspects of the intellect: creativity, organization, sequential processing, and appreciating the abstract. Over the years I have become obsessed with using software to solve practical problems while I continue to use my linguistic abilities to analyze social ones. After completing my master's degree, I plan to continue integrating both of my passions and use programming to transform and improve the lives of people around the world.</p>
 
     </section>
 
