final rearrage files

--- a/code.html
+++ b/code.html
@@ -17,7 +17,7 @@
 </head>
 
 <div id="tabs">
-  <a class="view" href="../index.html"> Home </a> |
+  <a class="view" href="index.html"> Home </a> |
   <a class="view" href="story.html"> Story </a> |
   <a class="active" href="#code"> My Code </a>
 </div>
