--- a/story.html
+++ b/story.html
@@ -17,9 +17,9 @@
 </head>
 
 <div id="tabs">
-  <a class="view" href="../index.html"> Home </a> |
+  <a class="view" href="index.html"> Home </a> |
   <a class="active" href="#story"> Story </a> |
-  <a class="view" href="tabs/code.html"> My Code </a>
+  <a class="view" href="code.html"> My Code </a>
 </div>
 
 
