--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <div id="tabs">
   <a class="active" href="#home"> Home </a> |
-  <a class="view" href="tabs/story.html"> Story </a> |
-  <a class="view" href="tabs/code.html"> My Code </a>
+  <a class="view" href="story.html"> Story </a> |
+  <a class="view" href="code.html"> My Code </a>
 </div>
 
 
