fixed image urls

--- a/code.html
+++ b/code.html
@@ -29,7 +29,7 @@
 
     <section>
         <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fish Game Server</h2>
-        <img alt="UML Diagram" class="demo-left" src="../resources/sundown_diagram.png">
+        <img alt="UML Diagram" class="demo-left" src="resources/sundown_diagram.png">
         <p>
           CS 4500 Software Development - Fall 2020<br>
           Roughly 8,000 lines of Java and 7 pages of interace design <br><br>
@@ -54,7 +54,7 @@
 
     <section>
         <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Language Predictor Tool</h2>
-        <img alt="Code Demo" class="demo-right" src="../resources/lp.png">
+        <img alt="Code Demo" class="demo-right" src="resources/lp.png">
         <p>
           DS 2000 - Spring 2018<br>
           Python and Statistics<br><br>
@@ -78,7 +78,7 @@
 
     <section>
         <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Light 'Em All</h2>
-        <img alt="UML Diagram" class="demo-left" src="../resources/lea.gif">
+        <img alt="UML Diagram" class="demo-left" src="resources/lea.gif">
         <p>
           CS 2510 Fundamentals of CS II - Spring 2018<br>
           Java and Graph Theory<br><br>
