--- a/story.html
+++ b/story.html
@@ -27,7 +27,7 @@
   <div class="wrapper">
     <header>
       <h1>Welcome</h1>
-      <p><img id="profile-photo" src="../resources/website-photo.JPG" alt="Personal Photo"></p>
+      <p><img id="profile-photo" src="resources/website-photo.JPG" alt="Personal Photo"></p>
       <b>Connect</b><br>
       <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
       <a target="_blank" href="https://github.com/alannaa">GitHub</a>
