--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p> I’m a <b>master’s student of computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. In other words, I spend hours a day studying things that take miliseconds to occur.</p>
 
         <p>I’m currently <b>seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b></p>
-        <p><a target="_blank" href="resources/Alanna_Pasco_Resume.PDF">View my resume</a></p>
+        <p><a target="_blank" href="resources/AlannaPasco_Resume2021">View my resume</a></p>
       </section>
 
       <footer>
