--- a/code.html
+++ b/code.html
@@ -19,7 +19,7 @@
 <div id="tabs">
   <a class="view" href="index.html"> Home </a> |
   <a class="view" href="story.html"> Story </a> |
-  <a class="active" href="#code"> My Code </a>
+  <a class="active" href="#code"> Programming Experience </a>
 </div>
 
 <body>
@@ -32,7 +32,7 @@
         <img alt="UML Diagram" class="demo-left" src="resources/sundown_diagram.png">
         <p>
           CS 4500 Software Development - Fall 2020<br>
-          Roughly 8,000 lines of Java and 7 pages of interace design <br><br>
+          Roughly 8,000 lines of Java and 7 pages of interface design <br><br>
           <b>Project Description:</b> Design and implement a gaming system that hosts games of <i>Hey, That’s my Fish!</i> and provides a server to which hackers can connect AI players to compete in tournaments. Project implemented from the bottom up starting with game pieces, full game and tournament play, and finally the client/server components.
           Project completed while fully participating in Northeastern’s key undergraduate software development course — without enrolling.
           That’s correct, you will not find CS 4500 on my transcript. With the permission of Professor Felleisen, I partook in this course after being told I had to wait another year to meet the requirements to.
@@ -53,15 +53,15 @@
     </section>
 
     <section>
-        <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Language Predictor Tool</h2>
+        <h2><a class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Language-Prediction Tool</h2>
         <img alt="Code Demo" class="demo-right" src="resources/lp.png">
         <p>
-          DS 2000 - Spring 2018<br>
+          DS 2000 Fundamentals of Data Science - Spring 2018<br>
           Python and Statistics<br><br>
           <b>Project Description:</b> Build a language-prediction tool to predict which langauge a given document is written in.
           The tool is effective on documents written in one of seven languages included in the sample set.
-          To clarify, we were given a set of 37 documents written in one of the seven languages. The documents all had which language
-          they were written in named in their filename, except for 3 which had the word 'unknown' included in the filenames. We were then
+          To clarify, we were given a set of 37 documents written in one of the seven languages.
+          The document filenames all included which language they were written, except for 3 docs which had the word 'unknown' included in the filenames. We were then
           set to implement our tool given these resources.<br><br>
           <b>Method:</b>
           <ol>
