--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="tabs">
   <a class="active" href="#home"> Home </a> |
   <a class="view" href="story.html"> Story </a> |
-  <a class="view" href="code.html"> My Code </a>
+  <a class="view" href="code.html"> Programming Experience </a>
 </div>
 
 
