--- a/story.html
+++ b/story.html
@@ -19,7 +19,7 @@
 <div id="tabs">
   <a class="view" href="index.html"> Home </a> |
   <a class="active" href="#story"> Story </a> |
-  <a class="view" href="code.html"> My Code </a>
+  <a class="view" href="code.html"> Programming Experience </a>
 </div>
 
 
