Adding thesis to story page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
         <p> I’m a <b>master’s student of computer science</b> at <b>Northeastern University</b>, delving into two computer systems courses at the moment. In other words, I spend hours a day studying things that occur in miliseconds.</p>
 
         <p>I’m currently <b>seeking an internship</b> that will contribute to my life pursuit of using programming to transform and improve the lives of people around the world.</b></p>
+
         <p><a target="_blank" href="resources/AlannaPasco_Resume2021.pdf">View my resume</a></p>
-      </section>
+
+        <p> Learn about my previous life as a social scientist and how I became a computer scientist via
+          <a class="view" href="story.html">my story</a>.</p>
+    </section>
 
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
