--- a/story.html
+++ b/story.html
@@ -32,6 +32,8 @@
       <a target="_blank" href="https://www.linkedin.com/in/alanna-pasco-8918028b/">Linkedin</a> |
       <a target="_blank" href="https://github.com/alannaa">GitHub</a>
       pasco.a@northeastern.edu<br><br>
+      <a target="_blank" href="resources/AlannaPasco_Resume2021.pdf">View my resume</a><br>
+      <a target="_blank" href="resources/Alanna Pasco Capstone Project.pdf">View my thesis on statelessness</a>
     </header>
 
     <section>
@@ -46,15 +48,7 @@
         <p>After transferring to Northeastern University in 2016, I was working part-time at a local bakery when I had an idea to improve the quality of our refrigerated products by tracking shelf life in a structured manner. Waste reduction was a side effect of my solution as it led the team to place more informed orders from our supplier. When one of my favorite regular customers, a software engineer, once asked what I was working on, I showed him my color-coded data visualization of the display shelf and the steps I took to place orders using it. His reaction surprised me: his eyes lit up, he grabbed a pen and napkin, and started explaining to me how my little system was an algorithm (I had no clue what an algorithm was at the time). And just like that, I was inspired to take my first computer science course.</p>
 
         <p>I instantly found a crossover between language learning and programming. Both pursuits engage similar aspects of the intellect: creativity, organization, sequential processing, and appreciating the abstract. Over the years I have become obsessed with using software to solve practical problems while I continue to use my linguistic abilities to analyze social ones. After completing my master's degree, I plan to continue integrating both of my passions and use programming to transform and improve the lives of people around the world.</p>
-
     </section>
-
-
-    <footer>
-      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-    </footer>
-
-
   </div>
 
 
